--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "scripts": {},
   "dependencies": {
-    "mongodb": "^2.2.5"
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "mongodb": "^2.2.5",
+    "mongoose": "^5.0.4"
   }
 }
