--- a/package.json
+++ b/package.json
@@ -2,11 +2,19 @@
   "name": "node-todo-api",
   "version": "0.0.0",
   "private": true,
-  "scripts": {},
+  "scripts": {
+    "test": "mocha server/**/*.test.js"
+  },
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "mongodb": "^2.2.5",
     "mongoose": "^5.0.4"
+  },
+  "devDependencies": {
+    "eslint-config-google": "^0.9.1",
+    "expect": "^22.2.2",
+    "mocha": "^5.0.0",
+    "supertest": "^3.0.0"
   }
 }
