--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "start": "node server/server.js",
+
     "test": "mocha server/**/*.test.js"
+  },
+  "engines": {
+    "node" : "9.4.0"
   },
   "dependencies": {
     "body-parser": "^1.18.2",
