--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "body-parser": "^1.18.2",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.1.1",
     "lodash": "^4.17.5",
     "mongodb": "^2.2.5",
-    "mongoose": "^5.0.4"
+    "mongoose": "^5.0.4",
+    "validator": "^9.4.1"
   },
   "devDependencies": {
     "eslint-config-google": "^0.9.1",
